# oxide

./: .gitignore  Cargo.toml  LICENSE  README.md  build.gradle.kts  oxide.toml  settings.gradle.kts
crates/oxide_config/: Cargo.toml  oxide.toml
crates/oxide_config/src/: client.rs  daemon.rs  lib.rs
crates/oxide_core/: Cargo.toml
crates/oxide_core/src/: lib.rs  package.rs  repository.rs
crates/oxide_core/src/utils/: nsid.rs
crates/oxide_daemon/: Cargo.toml  oxide.daemon.json  oxide.toml
crates/oxide_daemon/src/: config.rs  lib.rs  main.rs  plugins.rs
crates/oxide_daemon/src/plugin/: manager.rs  mod.rs
crates/oxide_home_server/: Cargo.toml
crates/oxide_ipc/: Cargo.toml  oxide.toml
crates/oxide_ipc/src/: protocol.rs  request.rs  response.rs
crates/oxide_npm/: Cargo.toml  oxide.toml
crates/oxide_npm/src/: config.rs  lib.rs  package.rs  project.rs
crates/oxide_pkg/: Cargo.toml  oxide.toml
crates/oxide_plugin/: Cargo.toml  oxide.toml
crates/oxide_plugin/src/: lib.rs  project.rs
crates/oxide_project/: Cargo.toml
crates/oxide_project/src/: config.rs  lib.rs  manager.rs
homeserver/: build.gradle.kts
homeserver/src/main/kotlin/sh/illumi/oxide/: Application.kt
homeserver/src/main/kotlin/sh/illumi/oxide/plugins/: Databases.kt  HTTP.kt  Monitoring.kt  Routing.kt  Security.kt  Serialization.kt  Sockets.kt
lib/rust/oxide_core/: oxide.toml
lib/rust/oxide_core/src/utils/: mod.rs  nsid.rs
lib/rust/oxide_core/tests/: nsid_test.rs
lib/rust/oxide_daemon/: Cargo.toml
lib/rust/oxide_daemon/src/: config.rs  lib.rs
lib/rust/oxide_home_server/migration/: Cargo.toml
lib/rust/oxide_home_server/migration/src/: m20220101_000001_create_table.rs
lib/rust/oxide_ipc/src/: lib.rs
lib/rust/oxide_project/: oxide.toml
lib/rust/oxide_project/src/: lib.rs
oxide-core/: Cargo.toml
oxide-core/src/: lib.rs
oxide-pkg/: Cargo.toml
oxide-pkg/src/: main.rs
oxide-repo-server/: Cargo.toml
oxide-repo-server/src/: main.rs
oxide-server/: Cargo.toml
oxide_common/: Cargo.toml
oxide_common/src/: lib.rs
oxide_common/src/net/: mod.rs
oxide_common/src/net/local/: request.rs
oxide_common/src/project/: config.rs  mod.rs
oxide_pkg/: Cargo.toml  oxide.daemon.json  oxide.toml
oxide_pkg/src/: lib.rs  main.rs
oxide_pkg/src/daemon/: config.rs  mod.rs  project_manager.rs
oxide_pkg/src/daemon/ipc/: request.rs  response.rs
oxide_pkg/src/daemon/job/: manager.rs  mod.rs
oxide_pkg/src/ipc/: mod.rs  protocol.rs  request.rs  response.rs  utils.rs
oxide_pkg/src/project/: config.rs  mod.rs
oxide_repo_server/: Cargo.toml
oxide_repo_server/src/: user.rs
oxide_system_daemon/: Cargo.toml
oxide_system_daemon/src/: config.rs  main.rs
src/: main.rs
