[package]
name = "oxide_pkg"
readme = "README.md"
documentation.workspace = true
description.workspace = true
version.workspace = true
authors.workspace = true
edition.workspace = true

[dependencies]
oxide_project = { version = "=0.0.1", path = "lib/rust/oxide_project" }
oxide_core = { version = "=0.0.1", path = "lib/rust/oxide_core" }
oxide_ipc = { version = "=0.0.1", path = "lib/rust/oxide_ipc" }
clap = { version = "4.0", features = ["derive"] }
structopt = "0.3.26"
twelf = "0.12.0"

[workspace]
members = [".", "lib/rust/*"]

[workspace.package]
version = "0.0.1"
authors = ["Liz Ainslie"]
description = "A decentralized package management tool from the future"
documentation = "https://oxide.illumi.sh/docs"
edition = "2021"

[workspace.dependencies]
extism-convert = "0.2.0"
extism-pdk = "1.0.0-rc1"
serde_json = "1.0.108"
package-json = "0.4.0"
extism = "^1.0.0-rc3"
node-semver = "2.1.0"
structopt = "0.3.26"
byteorder = "1.5.0"
typetag = "0.2.13"
execute = "0.2.12"
serde = "1.0.192"
twelf = "0.12.0"
toml = "0.8.8"
glob = "0.3.1"
