[package]
name = "oxide-repo-server"
version.workspace = true
authors.workspace = true
description.workspace = true
documentation.workspace = true
edition.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = {  version = "1.0", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
warp = "0.3"
bcrypt = "0.15"
sqlx = { version = "0.7", features = [ "runtime-tokio", "tls-native-tls", "uuid" ] }