[package]
name = "oxide_pkg"
version.workspace = true
authors.workspace = true
description.workspace = true
documentation.workspace = true
edition.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.0", features = ["derive"] }
structopt = "0.3.26"
serde_json = "1.0.108"
serde = { version = "1.0.192", features = ["derive"] }
toml = "0.8.8"
byteorder = "1.5.0"
