[package]
name = "oxide_npm"
version.workspace = true
authors.workspace = true
description.workspace = true
documentation.workspace = true
edition.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate_type = ["cdylib"]

[dependencies]
oxide_project = { version = "=0.0.1", path = "../oxide_project" }
oxide_plugin = { version = "=0.0.1", path = "../oxide_plugin" }
oxide_core = { version = "=0.0.1", path = "../oxide_core" }
serde = { workspace = true, features = ["derive"] }
package-json.workspace = true
node-semver.workspace = true
extism-pdk.workspace = true
serde_json.workspace = true
toml.workspace = true

