[package]
name = "oxide_plugin"
version.workspace = true
authors.workspace = true
description.workspace = true
documentation.workspace = true
edition.workspace = true

[dependencies]
oxide_core = { version = "=0.0.1", path = "../oxide_core" }
oxide_ipc = { version = "=0.0.1", path = "../oxide_ipc" }
oxide_project = { version = "=0.0.1", path = "../oxide_project" }