[package]
name = "oxide_project"
version.workspace = true
authors.workspace = true
description.workspace = true
documentation.workspace = true
edition.workspace = true

[dependencies]
serde_json = { workspace = true }
serde = { workspace = true, features = ["derive"] }
node-semver = { workspace = true }
toml = { workspace = true }
glob = { workspace = true }