[package]
name = "oxide_daemon"
version.workspace = true
authors.workspace = true
description.workspace = true
documentation.workspace = true
edition.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
oxide_project = { version = "=0.0.1", path = "../oxide_project" }
oxide_core = { version = "=0.0.1", path = "../oxide_core" }
oxide_ipc = { version = "=0.0.1", path = "../oxide_ipc" }
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
structopt.workspace = true
execute.workspace = true
extism.workspace = true
notify = "6.1.1"
